Scrolling parallax effect

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Parallax Effect</title>
 
     <link rel="stylesheet" href="Cloud-effect-parallax.css">
+    <link rel="stylesheet" href="Scrolling-parallax-effect.css">
 
 </head>
 
@@ -49,6 +50,16 @@
             </p>
         </section>
     </section>
+
+    
+    <!------ Scrolling parallax effect ------>
+    <section id="Scrolling-parallax-effect">
+        <header>
+            <h1>Scrolling parallax effect</h1>
+            <p>Pure CSS || No Javascript !</p>
+        </header>
+    </section>
+
 </body>
 
 </html>
