Shopping parallax effect

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="Moon-parallax-effect.css">
     <link rel="stylesheet" href="Cloud-effect-parallax.css">
     <link rel="stylesheet" href="Scrolling-parallax-effect.css">
+    <link rel="stylesheet" href="Shoping-parallax-effect.css">
 
 </head>
 
@@ -87,6 +88,77 @@
             <h1>Scrolling parallax effect</h1>
             <p>Pure CSS || No Javascript !</p>
         </header>
+    </section>
+
+
+        
+    <!------ Shopping parallax effect ------>
+    <section id="Shoping-parallax-effect">
+        <div id="parallax">
+            <section>
+            <div class="title">
+                <h3>HIGHEND/REALWORLD</h3>
+                <h1>PARALLAX</h1>
+            </div>
+        </section>
+
+        <section>
+            <div class="parallax-one">
+            </div>
+        </section>
+
+        <section>
+            <div class="block">
+                <p>
+                    <span class="first-character sc">I</span>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nisi quo repudiandae rem tenetur ex officiis dolores maiores culpa obcaecati tempore consequatur quia, beatae, velit odit vero voluptate. Ex, repellat! lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, quod veritatis impedit eius hic esse modi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia doloribus minus fuga soluta necessitatibus voluptate modi deleniti debitis dolorem quos consequatur nisi minima quae officiis, enim quasi, voluptatem facere deserunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni similique earum architecto deserunt autem blanditiis illo repellendus natus! Unde odio modi illo maxime porro repellat voluptatem, ullam fuga sapiente voluptas expedita tempore amet quisquam asperiores dicta commodi ab officia excepturi culpa adipisci numquam deserunt magni placeat dolore. Pariatur dolore iure ratione distinctio dolorem dolor natus, voluptate iste accusantium repudiandae cumque vero! Aperiam, ad! Distinctio sunt praesentium aliquid soluta, dolorem ipsa aut error asperiores tenetur, blanditiis nobis totam obcaecati iure quia laudantium molestias quidem sapiente earum esse ab placeat suscipit quod itaque. Architecto repellat eius accusamus nesciunt laboriosam accusantium totam tempora.
+                </p>
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore numquam voluptatibus sapiente adipisci quo dicta unde ad dolorum? Velit, eius iusto rerum a natus, voluptate doloremque cupiditate odit ratione perspiciatis repudiandae libero aliquid explicabo illum quisquam impedit sint in reiciendis debitis nemo porro. Distinctio, reprehenderit non. Culpa assumenda molestiae officia eum quasi inventore veritatis nemo expedita illo itaque sint delectus fuga similique, adipisci esse cupiditate aliquid aliquam et sit laudantium saepe! Blanditiis quia eius ipsum eum tempora illo, commodi pariatur dolores porro repudiandae incidunt ab, molestiae eos adipisci! Minus, ducimus tempora beatae veniam corrupti odit, quibusdam expedita maiores accusantium placeat ex dolorem consectetur laborum voluptatum consequatur architecto asperiores! Perspiciatis, temporibus praesentium.
+                </p>
+            </div>
+        </section>
+
+        <section>
+            <div class="parallax-two">
+
+            </div>
+        </section>
+
+        <section>
+            <div class="block">
+                <p>
+                    <span class="first-character ny">
+                        C
+                    </span>
+                    S Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, sed. Necessitatibus velit maiores quaerat ipsam voluptas, vel tempora a facere esse dolor architecto dolorem aliquam soluta tenetur, consequuntur adipisci sapiente libero porro, consequatur aperiam quibusdam. Tenetur quo, quos nam expedita commodi iure hic ullam rerum necessitatibus voluptate possimus odio iste voluptates aperiam ut sapiente maiores aspernatur beatae. Nulla, omnis quos tempore porro minima exercitationem aspernatur soluta impedit magni vero! Hic earum sit similique sequi asperiores enim, excepturi perferendis atque quis soluta veritatis temporibus impedit error recusandae aperiam officiis debitis fugit nobis modi magni maiores! Hic rerum deserunt delectus sint nam quaerat. Sapiente id quia tempora. Non qui voluptatibus quidem placeat itaque?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt reprehenderit labore obcaecati fugiat qui quod quaerat, velit ab, quas cupiditate perferendis soluta quam cumque eum! Sint soluta ullam vero molestias rerum nihil eos eaque ducimus similique praesentium repellat in, aliquam, unde minima et placeat modi nobis? Corrupti ipsum nesciunt pariatur, tempore quam magnam ducimus. Accusantium molestias laudantium vero impedit ut, nostrum ducimus ipsam doloremque enim, veritatis totam harum aliquam quia accusamus sunt. Ducimus cum impedit ab temporibus? Earum assumenda a optio exercitationem cumque eius maiores laborum voluptatibus doloremque corrupti sequi officiis et commodi aspernatur veniam sed, eveniet odio quisquam quo unde beatae numquam excepturi nemo eaque! Dignissimos porro eius cupiditate, quidem quo voluptatem esse cumque illum est! Voluptatum, possimus tenetur!
+                </p>
+            </div>
+        </section>
+
+        <section>
+            <div class="parallax-three">
+
+            </div>
+        </section>
+
+        <section>
+            <div class="block">
+                <p>
+                    <span class="first-character atw">D</span>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum enim quas explicabo tempora illo inventore ad nihil necessitatibus autem sapiente? Libero corporis accusamus voluptate, iusto laborum quibusdam veritatis eveniet! Laborum similique esse harum voluptatem temporibus laudantium tempora consectetur natus illum. Sequi aperiam ab ad, ratione ut saepe! Voluptas, vitae totam. Aut repudiandae architecto neque quae fugit aliquid obcaecati omnis dolorum quisquam labore maiores voluptates accusantium placeat, sapiente cum accusamus non provident ullam, dolorem debitis! Aut asperiores eos dicta provident aperiam. Autem nihil debitis cum tenetur exercitationem consequuntur tempore eveniet mollitia accusamus velit, quia illum adipisci hic molestiae earum aliquid?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex quam officia nobis error unde eius quas nihil porro dolorem atque harum deserunt, voluptates et repellat at, sint molestiae facilis earum? Sapiente tempora neque, adipisci porro nesciunt eius dolore expedita qui voluptatibus similique ullam, assumenda pariatur, doloremque iusto perferendis facilis. Optio vitae id corporis porro, in earum atque enim delectus animi dolorem facilis rem ut mollitia reiciendis esse, maxime autem quidem nihil facere totam? Pariatur consectetur ratione voluptate culpa, nulla deserunt sed doloribus soluta recusandae nesciunt ex laudantium nobis, repellat quam suscipit nostrum, iste molestiae voluptates inventore provident cumque corrupti voluptatum sunt.
+                </p>
+            </div>
+        </section>
+
+        </div>
     </section>
 
 
